--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body {
       margin-right: 2.5rem; } }
 
 .header {
-  background-image: linear-gradient(rgba(16, 29, 44, 0.8), rgba(16, 29, 44, 0.8)), url(/img/hero.jpeg);
+  background-image: linear-gradient(rgba(16, 29, 44, 0.8), rgba(16, 29, 44, 0.8)), url(../img/hero.jpeg);
   background-size: cover;
   grid-column: full-start / col-end 6;
   padding: 3rem 5rem;
@@ -222,7 +222,7 @@ body {
   background-color: #c69963;
   grid-column: full-start / col-end 4;
   display: grid;
-  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(/img/back.jpg);
+  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
   background-size: cover;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
@@ -252,8 +252,7 @@ body {
     .story__img-2 {
       grid-column: 4 / 7;
       grid-row: 3 / 5;
-      width: 100%;
-      height: fit-content; } }
+      width: 100%; } }
 
 .story__content {
   background-color: #f9f7f6;
@@ -407,9 +406,9 @@ body {
 
 .nav {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(6, minmax(20rem, 1fr));
   list-style: none;
-  justify-items: center; }
+  margin: 0 auto; }
   .nav__item {
     padding: 1rem;
     transition: all .3s; }
