--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -12,9 +12,10 @@
 
 .nav {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(6, minmax(20rem, 1fr));
   list-style: none;
-  justify-items: center;
+  // justify-items: center;
+  margin: 0 auto;
   &__item {
     padding: 1rem;
     transition: all .3s;
