--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: linear-gradient(rgba($color-secondary, 0.8), rgba($color-secondary, 0.8)), url(/img/hero.jpeg);
+  background-image: linear-gradient(rgba($color-secondary, 0.8), rgba($color-secondary, 0.8)), url(../img/hero.jpeg);
   background-size: cover;
   grid-column: full-start / col-end 6;
   padding: 3rem 5rem;
