--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,7 +3,7 @@
   grid-column: full-start/ full-end;
   grid-row: 9 / 10;
 
-  padding: 10rem;
+  padding: 8rem;
 
   @media only screen and (max-width:$bp-medium) {
     padding: 5rem;
@@ -12,10 +12,14 @@
 
 .nav {
   display: grid;
-  grid-template-columns: repeat(6, minmax(20rem, 1fr));
+  grid-template-columns: repeat(6, minmax(10rem, 1fr));
   list-style: none;
-  // justify-items: center;
-  margin: 0 auto;
+  justify-content: center;
+  font-size: 2rem;
+  // margin: 0 auto;
+  @media only screen and (max-width:$bp-medium) {
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  }
   &__item {
     padding: 1rem;
     transition: all .3s;
@@ -23,7 +27,7 @@
       transform: translateY(-5px);
       background-image: linear-gradient(rgba(#fff, .3), rgba(#fff, .3)) 
     }
-  }
+  } 
   
   &__link {
     text-decoration: none;
