--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,8 @@ body {
       grid-template-columns: repeat(auto-fit, minmax(30%, 1fr)); } }
   .nav__item {
     padding: 1rem;
-    transition: all .3s; }
+    transition: all .3s;
+    justify-self: center; }
     .nav__item:hover {
       transform: translateY(-5px);
       background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)); }
