--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,7 +17,10 @@ $font-display: 'Josefin Sans', sans-serif;
 //RWD breakpoint
 $bp-largest: 75em; //1100px
 $bp-large: 62.5em; //1000px
-$bp-medium: 50em; //1000px
+$bp-medium: 50em; //800px
+$bp-small: 40.625em; //650px
+$bp-smallest: 37.5em; //500px
+
 
 
 *,
@@ -56,5 +59,9 @@ body {
   
   @media only screen and (max-width:$bp-medium) {
     grid-template-rows: 6.5vh 93.5vh 20vh  repeat(2, min-content) 50vw repeat(3, min-content);
+  }
+
+  @media only screen and (max-width:$bp-medium) {
+    grid-template-rows: 6.5vh 93.5vh min-content  repeat(2, min-content) 50vw repeat(3, min-content);
   }
 } 
