--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -8,8 +8,13 @@
   
   @media only screen and (max-width:$bp-medium) {
     grid-column: full-start / full-end;
-
   }
+
+  @media only screen and (max-width:$bp-small) {
+    padding: 2rem;
+  }
+
+
 
   &__list{
     display: grid;
@@ -26,8 +31,12 @@
       margin-top: 1.2rem;
       align-items: center;
       margin: 0 auto;
-      
     } 
+    
+    @media only screen and (max-width:$bp-small) {
+      grid-template-columns: min-content max-content;
+    } 
+
   }
 
   &__details {
